fix flex box stretching issue, add custom hooks for firebase collection and document,

--- a/src/App.css
+++ b/src/App.css
@@ -80,20 +80,6 @@ h2 {
   margin-right: 10px;
 }
 
-.App-messages {
-  display: flex;
-  flex: 1;
-  min-height: 0;
-  flex-direction: column;
-  justify-content: start;
-  /* background-color: red; */
-  /* border: 6px black solid; */
-  text-align: start;
-  padding-left: 0px;
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
-
 .App-aside {
   width: 19.99%;
   display: flex;
@@ -167,25 +153,40 @@ nav {
   left: 0;
 }
 
-.messages-container {
+.channel {
   display: flex;
   flex-direction: column;
+  height: 100vh;
+}
+
+.channel-messages {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   flex: 1;
   overflow: hidden;
-  height: 100vh;
-  /* flex-shrink: 1; */
+}
+
+.messages-container {
+  min-height: 0;
+  text-align: start;
+  padding-left: 0px;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .chat-messages-form {
-  height: 100px;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: end;
+  align-items: center;
+  flex-basis: 100px;
   text-align: center;
-  margin: auto 0;
-  /* margin-bottom: 50px; */
-  /* background-color: blue; */
+  margin-bottom: 20px;
 }
 
 .message-input {
-  width: 88%;
+  width: 90%;
   height: 50px;
   max-height: 200px;
   border-radius: 4px;
@@ -208,7 +209,7 @@ nav {
 }
 
 .message-input:focus {
-  border: 1.28px rgb(196, 204, 221) solid;
+  border: 1.3px rgb(120, 125, 136) solid;
   background-color: rgb(248, 248, 248);
   outline: none;
 }
@@ -280,6 +281,7 @@ nav {
 .message {
   padding: 4px 20px;
 }
+
 .selected-message {
   background-color: rgb(243, 243, 243);
 }
